# Orinbot

./: .gitignore  README.md
analysis/: README.md  imu_lidar_sync.py
analysis/notebooks/: README.md  data_review.ipynb  mapping_notes.ipynb
bags/: .gitignore  README.md
configs/: README.md
install/: local_setup.sh  setup.sh
install/cloud_header_fixer/lib/cloud_header_fixer/: fix_cloud
install/cloud_header_fixer/share/cloud_header_fixer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/point_lio/lib/point_lio/: pointlio_mapping
install/point_lio/share/ament_index/resource_index/package_run_dependencies/: point_lio
install/point_lio/share/ament_index/resource_index/parent_prefix_path/: point_lio
install/point_lio/share/point_lio/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/point_lio/share/point_lio/cmake/: ament_cmake_export_dependencies-extras.cmake  point_lioConfig-version.cmake  point_lioConfig.cmake
install/point_lio/share/point_lio/config/: avia.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  unilidar_l1.yaml  unilidar_l2.yaml  velody16.yaml
install/point_lio/share/point_lio/environment/: ament_prefix_path.dsv  path.dsv
install/point_lio/share/point_lio/launch/: correct_odom_unilidar_l1.launch.py  correct_odom_unilidar_l2.launch.py  gdb_debug_example.launch.py  mapping_avia.launch.py  mapping_horizon.launch.py  mapping_mid360.launch.py  mapping_ouster64.launch.py  mapping_unilidar_l1.launch.py  mapping_unilidar_l2.launch.py  mapping_velody16.launch.py
install/point_lio/share/point_lio/rviz_cfg/: loam_livox.rviz
install/unitree_lidar_ros2/lib/unitree_lidar_ros2/: unitree_lidar_ros2_node
install/unitree_lidar_ros2/share/ament_index/resource_index/package_run_dependencies/: unitree_lidar_ros2
install/unitree_lidar_ros2/share/ament_index/resource_index/parent_prefix_path/: unitree_lidar_ros2
install/unitree_lidar_ros2/share/unitree_lidar_ros2/: launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  view.rviz
install/unitree_lidar_ros2/share/unitree_lidar_ros2/cmake/: unitree_lidar_ros2Config-version.cmake  unitree_lidar_ros2Config.cmake
install/unitree_lidar_ros2/share/unitree_lidar_ros2/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
pcd/: README.md
src/cloud_header_fixer/: package.xml  setup.cfg  setup.py
src/cloud_header_fixer/cloud_header_fixer/: fix_cloud.py
src/unilidar_sdk2/: CMakeLists.txt  package.xml
src/unitree_lidar_ros2/: CMakeLists.txt
tools/: README.md  export_pcd.sh  fix_timestamps.py  replay_bag.sh
tools/oak_detections_app/: README.md  main.py  oak_detections_node.py
