<?xml version="1.0"?>
<package format="3">
  <name>unilidar_sdk2</name>
  <version>0.0.0</version>
  <description>Vendor package for Unitree UniLidar SDK v2.</description>
  <maintainer email="you@example.com">Orinbot</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
